# robotics_course

./: .gitignore  README.md
README/: .bashrc  .project  USE ROS PROJECTS WITH ECLIPSE
artools_launch/: CMakeLists.txt  package.xml
artools_launch/data/: 4x4_384_1_marker.docx  4x4_384_1_marker.odt
artools_launch/launch/: ar_pose_single.launch
hokuyo/: CMakeLists.txt  map.pgm  map.yaml  package.xml
hokuyo/config/rviz/: demo_hector_slam.rviz  start_hokuyo.rviz
hokuyo/launch/: demo_hokuyo_slam.launch  start_hector_slam.launch  start_hokuyo.launch
learning_tf/: CMakeLists.txt  package.xml
learning_tf/launch/: start_demo.launch
learning_tf/nodes/: turtle_tf_broadcaster.py
myhector_slam_config/: CMakeLists.txt  package.xml
myhector_slam_config/launch/: mapping_default.launch  starthector_slam_sim.launch
myhector_slam_config/rviz_cfg/: mapping_demo.rviz
mynav2d_config/: CMakeLists.txt  package.xml
mynav2d_config/launch/: tutorial.launch
rc_armsim/: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  package.xml  setup.py
rc_armsim/conf/: controllers.yaml
rc_armsim/launch/: arm4dof_rviz.launch  arm_gazebo.launch  arm_rviz.launch  arm_simple_rviz.launch
rc_armsim/nodes/: servo2jointstate.py
rc_armsim/rviz/: arm4dof.rviz  arm_simple.rviz  rc_armsim.rviz
rc_armsim/urdf/: arm.urdf  arm.urdf.xacro  arm.xacro  arm4dof.urdf  arm_macros.xacro  arm_simple.urdf
rc_gazebo_worlds/: my_simple_arm.sdf
robot_math/: first_python_script.py
robot_math/scripts/: Activity1_rotations.py  Class_HomogeneousTransformationMatrices.py  Class_Other_ways_of_representing_orientation.py  FK_RR_manip.py  first_python_script.py  peter_corke_test1.py  practice1.py  profesor_rotation_matrices1.py  pylab_practice.py  quick.py  robotics_library_test.py  rotations_exercise.py
robotics_course/: .project  CMakeLists.txt  package.xml
