<?xml version="1.0"?>
<package>
  <name>artools_launch</name>
  <version>0.0.0</version>
  <description>The artools_launch package</description>
  <maintainer email="artur@todo.todo">artur</maintainer>
  <license>TODO</license>


  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>uvc_camera</build_depend>
  <build_depend>ar_pose</build_depend>
  <run_depend>uvc_camera</run_depend>
  <run_depend>ar_pose</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
